liblumen_codegen/lib/include/eir/Builder.h

class Type;
 // namespace mlir

namespace L = llvm;
typedef struct MLIROpaqueLocation *MLIRLocationRef;
typedef struct MLIROpaqueFuncOp *MLIRFunctionOpRef;
typedef struct MLIROpaqueBlock *MLIRBlockRef;
typedef struct MLIROpaqueAttribute *MLIRAttributeRef;
/// A source location in EIR
struct Span {
  // The starting byte index of a span
  uint32_t start;
  // The end byte index of a span
  uint32_t end;
};
struct FunctionDeclResult {
  MLIRFunctionOpRef function;
  MLIRBlockRef entryBlock;
};
enum class EirTypeTag : uint32_t {
  Unknown = 0,
  Void,
  Term,
  AnyList,
  AnyNumber,
  AnyInteger,
  AnyFloat,
  AnyBinary,
  Atom,
  Boolean,
  Fixnum,
  BigInt,
  Float,
  FloatPacked,
  Nil,
  Cons,
  Tuple,
  Map,
  Closure,
  HeapBin,
  Box,
  Ref,
};
union EirType {
  EirTypeAny any;
  EirTypeTuple tuple;
};
struct Arg {
  EirType ty;
  Span span;
  bool isImplicit;
};
enum class MapActionType : uint32_t {
  Unknown = 0,
  Insert,
  Update
};
struct MapAction {
  MapActionType action;
  MLIRValueRef key;
  MLIRValueRef value;
};
struct MapUpdate {
  MLIRValueRef map;
  MLIRBlockRef ok;
  MLIRBlockRef err;
  MapAction *actionsv;
  size_t actionsc;
};
struct KeyValuePair {
  MLIRAttributeRef key;
  MLIRAttributeRef value;
};
struct Match {
  MLIRValueRef selector;
  MLIRMatchBranch *branches;
  unsigned numBranches;
};
 // namespace eir

typedef struct OpaqueModuleBuilder *MLIRModuleBuilderRef;
MLIRModuleBuilderRef MLIRCreateModuleBuilder(MLIRContextRef context,
                                             const char *name);
MLIRModuleRef MLIRFinalizeModuleBuilder(MLIRModuleBuilderRef builder);
eir::FunctionDeclResult MLIRCreateFunction(MLIRModuleBuilderRef builder,
                                           const char *name, const eir::Arg *argv,
                                           int argc, eir::EirType *type);
//===----------------------------------------------------------------------===//
// Blocks
//===----------------------------------------------------------------------===//

MLIRValueRef MLIRGetCurrentBlockArgument(MLIRModuleBuilderRef builder, unsigned id);
MLIRValueRef MLIRGetBlockArgument(MLIRBlockRef block, unsigned id);
MLIRBlockRef MLIRAppendBasicBlock(MLIRModuleBuilderRef builder,
                                  MLIRFunctionOpRef f,
                                  const eir::Arg *argv,
                                  unsigned argc);
void MLIRBlockPositionAtEnd(MLIRModuleBuilderRef builder, MLIRBlockRef block);
//===----------------------------------------------------------------------===//
// Control Flow
//===----------------------------------------------------------------------===//

void MLIRBuildBr(MLIRModuleBuilderRef builder, MLIRBlockRef dest, MLIRValueRef *argv, unsigned argc);
void MLIRBuildIf(MLIRModuleBuilderRef builder,
                 MLIRValueRef value,
                 MLIRBlockRef yes,
                 MLIRValueRef *yesArgv,
                 unsigned yesArgc,
                 MLIRBlockRef no,
                 MLIRValueRef *noArgv,
                 unsigned noArgc,
                 MLIRBlockRef other,
                 MLIRValueRef *otherArgv,
                 unsigned otherArgc);
void MLIRBuildUnreachable(MLIRModuleBuilderRef builder);
void MLIRBuildReturn(MLIRModuleBuilderRef builder, MLIRValueRef value);
MLIRValueRef MLIRBuildStaticCall(MLIRModuleBuilderRef builder, const char *name, MLIRValueRef *argv, unsigned argc, bool isTail);
MLIRLocationRef MLIRCreateLocation(MLIRContextRef context, const char *filename,
                                   unsigned line, unsigned column);
//===----------------------------------------------------------------------===//
// Operations
//===----------------------------------------------------------------------===//

void MLIRBuildMatchOp(MLIRModuleBuilderRef builder, eir::Match op);
void MLIRBuildTraceCaptureOp(MLIRModuleBuilderRef builder, MLIRBlockRef dest, MLIRValueRef *argv, unsigned argc);
MLIRValueRef MLIRBuildTraceConstructOp(MLIRModuleBuilderRef builder, MLIRValueRef trace);